<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dorgerblue"
    android:orientation="vertical"
    tools:context=".LoginActivity">
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:textSize="50sp"
        android:textColor="@color/crimson"
        android:layout_marginLeft="80dp"
        android:background="@color/dorgerblue"
        android:text="@string/app_name"
        />
    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginLeft="100dp"
        android:background="@mipmap/app_icon"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="cursive"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:layout_marginLeft="60dp"
        android:background="@color/dorgerblue"
        android:text="@string/login_here"
        />

    <TextView
        android:fontFamily="sans-serif-black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:layout_marginLeft="40dp"
        android:textColor="@color/crimson"
        android:background="@color/dorgerblue"
        android:text="@string/e_name"
        />
    <EditText
        android:layout_width="match_parent"
        android:background="@drawable/edit_text_background"
        android:layout_marginLeft="40dp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        android:paddingLeft="20dp"
        android:id="@+id/enamelogin"
        android:inputType="textEmailAddress"
        android:layout_height="45dp"/>
    <TextView
        android:fontFamily="sans-serif-black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:textSize="30sp"
        android:textColor="@color/crimson"
        android:background="@color/dorgerblue"
        android:text="@string/password"
        />
    <EditText
        android:layout_width="match_parent"
        android:background="@drawable/edit_text_background"
        android:layout_marginLeft="40dp"
        android:id="@+id/passwordlogin"
        android:paddingLeft="20dp"
        android:inputType="textPassword"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        android:layout_height="45dp"/>

    <TextView
        android:fontFamily="sans-serif-black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:textSize="30sp"
        android:id="@+id/login"
        android:textColor="@color/crimson"
        android:background="@color/dorgerblue"
        android:text="@string/Login"
        />
    <TextView
        android:fontFamily="sans-serif-black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginLeft="150dp"
        android:id="@+id/openRegister"
        android:layout_marginTop="30dp"
        android:textColor="@color/crimson"
        android:background="@color/dorgerblue"
        android:text="@string/new_user"
        />


</LinearLayout>

