<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dorgerblue"
    tools:context=".Register">

    <TextView
        android:layout_width="match_parent"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/crimson"
        android:text="@string/app_name"
        android:layout_marginLeft="50dp"
        android:textSize="50sp"
        android:layout_height="wrap_content"/>
    <ImageView
        android:layout_width="100dp"
        android:background="@mipmap/app_icon"
        android:layout_marginLeft="100dp"
        android:layout_height="100dp"/>
    <TextView
        android:layout_width="match_parent"
        android:fontFamily="cursive"
        android:textColor="@color/black"
        android:text="Register now"
        android:layout_marginLeft="50dp"
        android:textSize="50sp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/crimson"
        android:text="@string/username"
        android:layout_marginLeft="50dp"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_width="match_parent"
        android:background="@drawable/edit_text_background"
        android:id="@+id/regUsername"
        android:textSize="25sp"
        android:inputType="text"
        android:padding="10dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:layout_marginLeft="50dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/crimson"
        android:text="@string/e_name"
        android:layout_marginLeft="50dp"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_width="match_parent"
        android:background="@drawable/edit_text_background"
        android:id="@+id/regEname"
        android:textColor="@color/black"
        android:padding="10dp"
        android:textSize="25sp"
        android:inputType="textEmailAddress"
        android:fontFamily="sans-serif"
        android:layout_marginLeft="50dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/crimson"
        android:text="@string/password"
        android:layout_marginLeft="50dp"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_width="match_parent"
        android:background="@drawable/edit_text_background"
        android:id="@+id/regPassword"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:padding="10dp"
        android:inputType="text"
        android:fontFamily="sans-serif"
        android:layout_marginLeft="50dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/crimson"
        android:text="@string/confirm_password"
        android:layout_marginLeft="50dp"
        android:textSize="20sp"
        android:layout_height="wrap_content"/>
    <EditText
        android:layout_width="match_parent"
        android:background="@drawable/edit_text_background"
        android:id="@+id/regConpassword"
        android:fontFamily="sans-serif"
        android:textSize="25sp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_marginLeft="50dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/black"
        android:text="Submit"
        android:layout_marginLeft="150dp"
        android:id="@+id/submit"
        android:textSize="50sp"
        android:layout_height="wrap_content"/>




</LinearLayout>